--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "handlebars": "^4.7.7",
     "mongoose": "^6.4.6",
     "nanoid": "^2.1.8",
+    "nodemailer": "^6.7.8",
+    "nodemailer-sendgrid": "^1.0.3",
     "passport": "^0.6.0",
     "sweetalert2": "^11.4.24"
   }
